@startuml
'https://plantuml.com/class-diagram

class ListProgram {

 +   main()
 +   start()

}

class ListProgramController {
 +   addListClick(event e)

 +  removeListClick(event e)

 +   addClick(event e)

 +   removeClick(event e)

 +   editListClick(event e)

 +   editClick(event e)

 +   markCompleteClick(event e)

 +   displayAll(event e)

 +   SaveOneClick(event e)


 +   loadOneClick(event e)

 +   displayComplete(event e)

 +   displayIncomplete(event e)

 +   sortByDateClick(event e)


}

class Lists {

    ArrayList<List> Lists

  +  createLists()

  + addAList(List list)
  +  removeAList(List list)
  +  editList(List list)
  +  loadList(String list)
  +  saveList(string list)



}

class List {

    String listTitle
    ArrayList<Tasks> Tasks
    ArrayList<Tasks> CompletedTasks
    ArrayList<Tasks> IncompleteTasks

  +  createList(String title)

  +  setTitle(String title)
  +  getTitle()
  +  getTasks()

  +  addTask(String task)
  +  editTask(String task)
  +  removeTask(String task)
  +  markCompleted(Boolean completed)
  +  displayCompletedTasks()
  +  displayIncompleteTasks()
  +  sortByDate(List list)

  +  toString()


}

class Task {

    String descript
    String date
    Boolean isCompleted

  +  createTask(String descript, String date, Boolean isCompleted)

  +  setDescription(String descript)
  +  setDate(String date)
  +  setIsCompleted(Boolean isCompleted)
  +  getDescription()
  +  getDate()
  +  getIsCompleted()

  +  toString()


}



javafx.Application <|-- ListProgram
ListProgram -- ListProgramController
ListProgramController *-> Lists
Lists *--> List
List *--> Task


@enduml